// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CPopover customize 1`] = `
<body>
  <button
    class="btn btn-primary"
    type="button"
  >
    Test
  </button>
</body>
`;

exports[`loads and displays CPopover component 1`] = `
<div>
  <button
    class="btn btn-primary"
    type="button"
  >
    Test
  </button>
</div>
`;
